--- a/src/scss/components/UI/_nav.scss
+++ b/src/scss/components/UI/_nav.scss
@@ -31,7 +31,7 @@
     display: flex;
 
     &__btn {
-      display: none;
+      display: none!important;
       margin: 0 auto;
 
       @media (max-width: 1250.98px) {
