--- a/src/scss/components/_advantages.scss
+++ b/src/scss/components/_advantages.scss
@@ -42,6 +42,22 @@
       @media (max-width: 720.98px) {
         padding: 0 24px 30px;
       }
+
+      @media (max-width: 480.98px) {
+        display: none;
+      }
+    }
+
+    &--mobile {
+      display: none;
+
+      @media (max-width: 480.98px) {
+        display: block;
+      }
+    }
+
+    &.hidden {
+      display: none;
     }
 
     &-wrapper {
@@ -161,6 +177,16 @@
         display: block;
         height: 100%;
       }
+    }
+  }
+
+  &__show-more {
+    display: none;
+
+    @media (max-width: 480.98px) {
+      width: 100%;
+      display: block;
+      margin: 20px 0 40px;
     }
   }
 }
