--- a/src/scss/components/UI/_form.scss
+++ b/src/scss/components/UI/_form.scss
@@ -56,6 +56,11 @@
       font-weight: 400;
       line-height: 19px;
       color: #181818;
+
+      a {
+        color: #181818;
+        text-decoration: underline;
+      }
     }
   }
 
