--- a/src/scss/components/UI/_nav.scss
+++ b/src/scss/components/UI/_nav.scss
@@ -35,7 +35,7 @@
       margin: 0 auto;
 
       @media (max-width: 1250.98px) {
-        display: block;
+        display: block!important;
       }
     }
   }
