--- a/src/scss/components/_header.scss
+++ b/src/scss/components/_header.scss
@@ -1,5 +1,30 @@
 .header {
-  transition: all .3s ease-in-out;
+  &-main {
+    transition: all .3s ease-in-out;
+    
+    &.is-scrolling {
+      position: fixed;
+      top: 0;
+      left: 0;
+      width: 100%;
+      background: #fff;
+      box-shadow: 0px 19px 22.5px 0px #A1BECE40;
+      z-index: 10;
+  
+      .header-logo {
+        width: 72px;
+        height: 72px;
+      }
+  
+      .header-info__upper {
+        display: none;
+      }
+  
+      .header-info__mail {
+        display: none;
+      }
+    }
+  }
   
   &-wrapper {
     position: relative;
@@ -10,29 +35,6 @@
 
     @media (max-width: 1250.98px) {
       justify-content: flex-start;
-    }
-  }
-
-  &.is-scrolling {
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    background: #fff;
-    box-shadow: 0px 19px 22.5px 0px #A1BECE40;
-    z-index: 10;
-
-    .header-logo {
-      width: 72px;
-      height: 72px;
-    }
-
-    .header-info__upper {
-      display: none;
-    }
-
-    .header-info__mail {
-      display: none;
     }
   }
 
