--- a/src/scss/components/_hero.scss
+++ b/src/scss/components/_hero.scss
@@ -4,6 +4,10 @@
   @media (max-width: 720.98px) {
     margin-bottom: 40px;
   }
+
+  // &.is-scrolling {
+  //   padding-top: 300px;
+  // }
   
   &-wrapper {
     padding: 27px 60px;
