--- a/src/scss/_settings.scss
+++ b/src/scss/_settings.scss
@@ -12,6 +12,10 @@ body {
   font-family: 'Rubik', sans-serif;
   font-size: 16px;
   font-weight: 400;
+
+  &.scroll-disable {
+    overflow-y: hidden;
+  }
 }
 
 img {
